@@ -1,0 +1,6 @@
+from Products.CMFCore.utils import getToolByName
+
+def uninstall(portal):
+    setup_tool = getToolByName(portal, 'portal_setup')
+    setup_tool.runAllImportStepsFromProfile('profile-plonetheme.classic:uninstall')
+    return "Ran all uninstall steps."
